Fix practice view did not work because sprint qualifying, reomve uneccessary scrollbar

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -95,7 +95,7 @@ td {
 
 .scroll-table {
 	overflow: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 /* Colors */
